--- a/public/style.css
+++ b/public/style.css
@@ -3,6 +3,6 @@ body { font: 13px Helvetica, Arial; }
 #messenger-form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
 #messenger-form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
 #messenger-form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-#messages-box { list-style-type: none; margin: 0; padding: 0; }
+#messages-box { list-style-type: none; margin: 0; padding: 0; overflow-y: scroll; }
 #messages-box li { padding: 5px 10px; }
 #messages-box li:nth-child(odd) { background: #eee; }
