Start foundation for /commands

--- a/public/style.css
+++ b/public/style.css
@@ -23,3 +23,7 @@ body { font: 13px Helvetica, Arial; }
 #currently-typing {
   min-height: 3em;
 }
+
+/* TODO http://stackoverflow.com/questions/1032914/how-to-make-a-div-to-fill-a-remaining-horizontal-space
+         ^ may fix the width of the message bar
+*/
